--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "server": "npx json-server --watch db.json --static ./src"
   },
   "dependencies": {
-    "axios": "^1.7.9", 
+    "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
